--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
 }
 
 #main-container {
-    min-height: 500px;
-    width: 500px;
+    min-height: 650px;
+    min-width: 650px;
     border: 2px solid transparent;
     border-color: black;
     /*below is a way to center the square*/
@@ -15,4 +15,10 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: grid;
+}
+
+.grid-square {
+    border: 1px solid black;
+    box-sizing: border-box;
 }
