--- a/style.css
+++ b/style.css
@@ -41,11 +41,28 @@ body {
     display: grid;
 }
 
+#left-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
 #button-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
+    color: white;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
+.button-box {
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 
 .switch {
@@ -72,7 +89,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: rgba(255, 0, 0, 0.692);
     transition: 0.4s;
     border-radius: 12px;
     backface-visibility: hidden; /* To prevent other elements from moving around when I click the button. */
